comment on paper

--- a/PrivateDiscussion.tex
+++ b/PrivateDiscussion.tex
@@ -49,6 +49,6 @@ Y_{k,j,a}^d = \phi_{k,j,a}^d \left( \bm{X}_{k,a}^d, \bm{B}_{k} \right) + \vareps
 \noindent (3) Issues:\\
 
 \noindent (A) Exogeneity? Only in differences. \\
-\noindent Comment: A = the exogeneity tests are not as satisfactory. As you mentioned,they could be based on the power of the null.\\
+\noindent Comment: the exogeneity tests are not as satisfactory. As you mentioned,they could be based on the power of the null.\\
 
 \end{document}
