--- a/CommentPaper.tex
+++ b/CommentPaper.tex
@@ -11,25 +11,25 @@
 \begin{enumerate}
 
 \item \textbf{Measured Risk Factors.}\\
-\noindent The paper considers four ``risk factors'' auguring poor adult outcomes: (i) growing up in a socioeconomically deprived family; (ii) exposure to maltreatment, (iii) low IQ, and (iv) poor self-control. This is s a symptom of a pervasive issue in the current state of the literature studying children: a \textbf{lack of a measure of childhood poverty with economic content}. The measures that they use have impressive predictive power and are interesting. They also have the virtues highlighted in the paper (e.g. prospective measurement). But a measure of childhood poverty would help to homogenize how interventions are targeted---and targeting is one of the take-aways of the paper.
+\noindent The paper considers four ``risk factors'' that can contribute to poor adult outcomes: (i) growing up in a socioeconomically deprived family; (ii) exposure to maltreatment, (iii) low IQ, and (iv) poor self-control. This analysis is a symptom of a pervasive issue in the current state of the literature studying children: \textbf{the lack of an economically meaningful measure of childhood poverty}. The measures that Caspi et al. use have impressive predictive power and are interesting, in addition to other virtues highlighted in the paper (e.g. prospective measurement). Even so, a measure of childhood poverty would help to homogenize how interventions are targeted. \\
 
-\noindent Summary indices are common in Economics (e.g. \citet{Kline_Walters_2016_QJE}), and not necessarily comprehensive. A virtue of this paper is to tests this summary index in terms of predictive power.\\
+\noindent Summary indices are common in Economics \citep[e.g.][]{Kline_Walters_2016_QJE}, and not necessarily comprehensive. A virtue of this paper is that it tests the predictive power of this summary index.\\
 
 \item \textbf{Outcomes Studied and the ``80-20'' Hypothesis.}\\
-\noindent It is evident that only a subset of outcomes could be monetized, and the paper hints at monetizing. But given that at the end it doesn't, is it worth it to think how the outcomes analyzed are elected? One hypothesis is being tested: the ``80-20'' hypothesis, and eight outcomes are used. The hypothesis roughly holds within this set, so to questions arise. (i) \textbf{Is there cherry-picking?}; (ii) Even in the absence of cherry picking, it is of interest to know: \textbf{What other outcomes satisfy the ``80-20'' hypothesis?}
+\noindent It is evident that only a subset of outcomes can be monetized. Although this paper hints at monetizing, it doesn't in the end. This raises the question of how the analyzed outcomes are selected. It is especially important for the authors to consider a wide set of outcomes given they are testing the ``80-20'' hypothesis. The hypothesis roughly holds given the set of eight outcomes. \textbf{Is there cherry-picking?} Even in the absence of cherry picking, it is of interest to know \textbf{what other outcomes satisfy the ``80-20'' hypothesis.} \\
 
-\noindent Although an interesting way to summarize the data, the origin of the ``80-20'' hypothesis is more anecdotal than scientific. The paper is critical to what it calls ``typical approaches to prediction in population studies'' because they summarize only one outcome. \textbf{Why is the proposed procedure a way to test multiple outcomes?} It tests one outcome at the time, but does not adjust for multiplicity. Here's where cost-benefit analysis could be complementary. 
+\noindent Although an interesting way to summarize the data, the origin of the ``80-20'' hypothesis is more anecdotal than scientific. The paper is critical towards what it calls ``typical approaches to prediction in population studies'' because they summarize only one outcome. \textbf{Why is the proposed procedure a rigorous way to test multiple outcomes?} It tests one outcome at the time without adjusting for multiplicity. This is where a cost-benefit analysis could be complementary. \\
 
 \noindent The analysis on aggregation is not as clear.\\
 
 \item \textbf{Predicting High-Cost Group Using Four Measures of Disadvantage}.\\
-\noindent The four ``risk factors'' noted before successfully predict the adult outcomes studied. This necessarily communicates with the current state of the literature on early-childhood education because \textbf{disadvantaged children benefit the most from receiving policies early in their lives} \citep{Elango_Hojman_etal_2016_Early-Edu}.\\
+\noindent The four ``risk factors'' listed above successfully predict the adult outcomes studied. This corresponds with the current state of the literature on early-childhood education because \textbf{disadvantaged children benefit the most from receiving policies early in their lives} \citep{Elango_Hojman_etal_2016_Early-Edu}.\\
 
 \item \textbf{Results by Gender}.
-\noindent The predictions do not differ by gender. But it is commonly the case that treatment effects differ \citep[see][]{Elango_Hojman_etal_2016_Early-Edu}, and as a consequence rates of return from policies commonly implemented across gender differ as well \citep[see][]{Garcia_etal_2016_Comp_CBA_Unpublished}. How does the  ``80-20'' Hypothesis differ by gender? \textbf{Is there further evidence for policies targeted early at life to be gender-specific?}\\
+\noindent The predictions do not differ by gender. However, it is commonly the case that treatment effects differ \citep[see][]{Elango_Hojman_etal_2016_Early-Edu}, and as a consequence rates of return from policies implemented across gender differ as well \citep[see][]{Garcia_etal_2016_Comp_CBA_Unpublished}. How does the  ``80-20'' Hypothesis differ by gender? \textbf{Is there further evidence for policies targeted early at life to be gender-specific?}\\
 
 \item \textbf{Predictions and Causality}.
-\noindent The strength of ``risk factors'' as adult-outcome predictors suggest that studying causality is fascinating. \citep[see][]{Garcia_etal_2016_Comp_CBA_Unpublished} provide conditions under which predictors could have a causal interpretation, i.e. satisfy standard independence assumptions. These conditions have testable implications, which require rich sets of measures. If satisfied, they enable to interpret \textbf{predictors as causal mediators} as in \citep{Heckman_Pinto_etal_2013_PerryFactor}.
+\noindent The strength of ``risk factors'' as adult-outcome predictors suggest that studying causality is fascinating. \citet{Garcia_etal_2016_Comp_CBA_Unpublished} provide conditions under which predictors could have a causal interpretation, i.e. satisfy standard independence assumptions. These conditions have testable implications, which require rich sets of measures. If satisfied, they enable the interpretation of\textbf{predictors as causal mediators} as in \citep{Heckman_Pinto_etal_2013_PerryFactor}.
 
 \end{enumerate}
 
