--- a/abc_comprehensivecba_HT.tex
+++ b/abc_comprehensivecba_HT.tex
@@ -2,7 +2,9 @@
 \input{preamble}
 \input{output/mainstatistics}
 
-\externaldocument{abc_comprehensivecba_appendix_2016-07-31a_jlg}
+\externaldocument{abc_comprehensivecba_appendix-pub_2016-11-10a_sjs}
+\externaldocument{abc_comprehensivecba_appendix-priv_2016-11-08b}
+\externaldocument{abc_comprehensivecba_2016-11-10a_sjs}
 \pagenumbering{roman}
 
 \begin{document}
@@ -39,6 +41,39 @@ The University of Chicago}
 
 \setcounter{page}{0}
 \pagenumbering{arabic}\
+
+\begin{center}
+Note for file on CBA\\
+11/9/16\\
+(For private discussion with Jorge)
+\end{center}
+We have two distinct approaches.
+\begin{enumerate}[(1)]
+\item Structural approach
+    \begin{enumerate}[(A)]
+    \item Find people ``in the ballpark''
+    \item Write out model/assumption
+    \item Structural invariance role
+    \item Don't need exogeneity -- we can correct for it
+    \item How we use it to make out-of-sample comparisons for treatment and controls
+    \item How to deal with future values of $\bm{X}^d_{k,a}$ $a>a^{\ast}$. How to predict those? How exactly do we do this?
+    \item Also how do we forecast future $\bm{X}^d_{k,a}$ if it lags? And how to correct the standard errors?
+    \end{enumerate}
+\item Matching
+    \begin{enumerate}[(A)]
+    \item Same step as 1
+    \item Assume exogeneity and find counterparts; we don't need exogeneity in levels -- just in differences. $(Y^1 - Y^0 = \bm{\mu}^1 - \bm{\mu}^0 + \varepsilon^1_0 - \varepsilon^0)$, need $E(\varepsilon^1 - \varepsilon^0 | \bm{X}) = 0$
+    \item Do we need structural invariance? (Not necessarily.) We can assume that there is a break. But need invariance as to levels
+    \item These are counterparts to future $\bm{X}$ question -- how to match?
+    \end{enumerate}
+\end{enumerate}
+
+\noindent Issues
+\begin{enumerate}[(a)]
+\item Exogeneity? Only in differences
+\item How to deal with future $\bm{X}^d_a$ not predicted by current information set
+\end{enumerate}
+
 
 \noindent Outline of the paper
 
@@ -112,7 +147,7 @@ The University of Chicago}
 \item No discussion of school age costs (e.g., special education). \textbf{[JLG: see Section 3, in which this is explicitly documented.]}
 \end{enumerate}
 
-There is a growing interest in early childhood education as a means for promoting social mobility.\footnote{\citet{Bajaj_Labaton_2009_ObamaRiskAssets,White_House_2014_Econ_of_EC_Investments,White_House_2014_Fact_Sheet_Press}.} However, comprehensive and methodologically rigorous evidence on its economic benefits is still scarce. Many recent studies: (i) focus on a limited set of outcomes like IQ or achievement test scores that fail to capture the full array of program effects;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff. A battery of studies compare children who were just eligible and just ineligible for preschool. They therefore only assess the gains of an additional, earlier year of preschool. This does not represent a comprehensive evaluation approach; it evaluates a specific set of children for a very narrow set of tests and within a time horizon of a single year of treatment. Examples of these studies include: \citet{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) are based on data from follow-ups that are short-term in nature; (iii) do not correct for program attrition or for non-compliance with assignment treatment;\footnote{Consider the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. Comparing subjects in the treatment and the control groups usually yields relatively low gains. This attenuation happens because a substantial proportion of subjects randomized out of the program were enrolled into preschool alternatives, some of being other Head Start centers. Thus, a raw comparison between the treatment- and the control-group subjects does not inform on either the efficiency or the effectiveness of Head Start \emph{per se}. Studies providing a methodology to account for substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline-Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.} or (iv) are based on randomized controlled trials with flawed designs.\footnote{An evaluation of the Tennessee Voluntary Prekindergarten is an example \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program. Unfortunately, they asked permission to assess the children after the randomization protocol. Thus, their main evaluation is based on information for children whose parents agreed for them to be evaluated \textit{post} randomization, inducing a potential imbalance between the children randomized into and out of the program. The evaluation does not account for that. Further, results for this evaluation represent a narrow set of short-term outcomes.}
+There is a growing interest in early childhood education as a means for promoting social mobility.\footnote{\citet{Bajaj_Labaton_2009_ObamaRiskAssets,White_House_2014_Econ_of_EC_Investments,White_House_2014_Fact_Sheet_Press}.} However, comprehensive and methodologically rigorous evidence on its economic benefits is still scarce. Many recent studies: (i) focus on a limited set of outcomes like IQ or achievement test scores that fail to capture the full array of program effects;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff. A battery of studies compare children who were just eligible and just ineligible for preschool. They therefore only assess the gains of an additional, earlier year of preschool. This does not represent a comprehensive evaluation approach; it evaluates a specific set of children for a very narrow set of tests and within a time horizon of a single year of treatment. Examples of these studies include: \citet{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) are based on data from follow-ups that are short-term in nature; (iii) do not correct for program attrition or for non-compliance with assignment treatment;\footnote{Consider the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. Comparing subjects in the treatment and the control groups usually yields relatively low gains. This attenuation happens because a substantial proportion of subjects randomized out of the program were enrolled into preschool alternatives, some of being other Head Start centers. Thus, a raw comparison between the treatment- and the control-group subjects does not inform on either the efficiency or the effectiveness of Head Start \emph{per se}. Studies providing a methodology to account for substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline_Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.} or (iv) are based on randomized controlled trials with flawed designs.\footnote{An evaluation of the Tennessee Voluntary Prekindergarten is an example \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program. Unfortunately, they asked permission to assess the children after the randomization protocol. Thus, their main evaluation is based on information for children whose parents agreed for them to be evaluated \textit{post} randomization, inducing a potential imbalance between the children randomized into and out of the program. The evaluation does not account for that. Further, results for this evaluation represent a narrow set of short-term outcomes.}
 
 Current justification for the long-term effectiveness and the efficiency of early childhood education in the U.S. is largely based on evidence from the Perry Preschool Program (hereafter Perry). This program has a followup to age 40. Analyses of Perry suggest that early childhood education has significant positive effects on a variety of outcomes, even when accounting for compromised randomization, small-sample-size inference, and multiple hypothesis testing.\footnote{\cite{Heckman_Moon_etal_2010_QE}.} The rate of return through age 4- ranges from 7 to 10 percent.\footnote{That is, if one dollar were to be invested at age 4, and then reinvested annually and compounded over a lifetime, the return would accrue to 60 to 300 dollars by age 65. This accounts for both the program's cost and the social burden a government would cause by raising taxes to pay for it \citep{Heckman_Moon_etal_2010_RateofReturn}.} This paper contributes to the literature by analyzing data from two randomized controlled trials, the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE). We supplement data using multiple non-experimental, nationally representative sources.
 
@@ -132,7 +167,7 @@ This paper extends the work of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInv
 
 The cost-benefit analysis of ABC and CARE provide composite measures of the program's efficiency that weigh these treatment effects according to their cost to society. The pooled benefit-to-cost ratio, \bcp\ (s.e. \bcsep), and internal rate of return \irrp\ (s.e. \irrsep), indicate that ABC and CARE are an efficient program when considering the life-cycle trajectories of the subjects.
 
-Two previous related pieces of work provide a cost-benefit analysis of ABC \citep{Masse_Barnett_2002_BOOKBenefitCostAnalysis,Barnett_Masse_2007_EER}. Their analysis is limited to outcomes up to age 21, before any of the labor income, crime, and health benefits of the program arise according to our findings. It does not provide standard errors or an analysis of the estimates' sensitivity to different modeling assumptions. \citet{Kline-Walters_2015_NBER-Evaluating} provide a back-of-the-envelope cost-benefit analysis of Head Start using the Head Start Impact Study. They do not analyze the life-cycle benefits and costs of early childhood education.
+Two previous related pieces of work provide a cost-benefit analysis of ABC \citep{Masse_Barnett_2002_BOOKBenefitCostAnalysis,Barnett_Masse_2007_EER}. Their analysis is limited to outcomes up to age 21, before any of the labor income, crime, and health benefits of the program arise according to our findings. It does not provide standard errors or an analysis of the estimates' sensitivity to different modeling assumptions. \citet{Kline_Walters_2015_NBER-Evaluating} provide a back-of-the-envelope cost-benefit analysis of Head Start using the Head Start Impact Study. They do not analyze the life-cycle benefits and costs of early childhood education.
 
 The paper proceeds as follows. Section~\ref{section:background}  provides an overview of each program. It includes a description of the eligibility criteria and the populations served, a characterization of the randomization protocol and control substitution, a comprehensive summary of the treatment, and a description of the data sources. Section~\ref{section:methodology} formalizes our methodology by discussing how we correct for compromised randomization and control substitution, how we test for treatment effects across multiple outcomes, and how we forecast outcomes across the life cycle. Section~\ref{section:results} presents our main results. Section~\ref{section:conclusion} concludes. An extensive appendix presents a thorough description of the program and its costs, the data, and details on how we monetize the life-cycle outcomes. It also discusses various alternative methodologies to evaluate the programs, and documents the results we present to a further extent.
 
