--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -356,9 +356,9 @@ Making valid predictions of out-of-sample treatment effects does not require mak
 
 Nonetheless, in this paper we focus on making valid predictions of separate treatment and control post-$a^*$ profiles. Doing so allows us to test the validity of our methodology by comparing (within the support of the experimental sample) outcomes by treatment status for the experimental control and treatment groups with those from the synthetic control and treatment groups we generate. Comparisons between the experimental control group and the synthetic control group are particularly compelling. By design, neither group receives treatment. In our data, all persons offered treatment accept it, so it is straightforward to construct synthetic control groups in auxiliary samples using only eligibility criteria.
 
-There are two distinct stages in our analysis. In Stage I, we construct samples of comparison group members in the auxiliary samples with the same or similar characteristics as the experimental group members. The minimal set of characteristics includes the background variables $\bm{B} \in \mathcal{B}_0$. We use a coarse form of matching based on Algorithm~\ref{alg:match} in Web Appendix~\ref{appendix:match}. In Stage II, we build models in these samples to forecast out-of-sample outcomes separately for the outcomes of the treated and the controls.
+There are two distinct stages in our analysis. In Stage I, we construct samples of comparison group members in the auxiliary samples with the same or similar characteristics as the experimental group members. The minimal set of characteristics includes the background variables $\bm{B} \in \mathcal{B}_0$. We use a coarse form of matching based on Algorithm~\ref{alg:match} in Web Appendix~\ref{appendix:match}. In Stage II, we build models in these samples to predict out-of-sample outcomes separately for the outcomes of the treated and the controls.
 
-Specifically, we adopt a three-step procedure. In Step 1, we use the experimental sample to conduct mediation analyses relating the vector of outcomes at age $a$ for person $i$ ($\bm{Y}^{d}_{i,a}$) for $a\leq a^*$ to predictor variables (and interactions) that are affected by treatment ($\bm{X}^{d}_{i,a}$), as well as background variables ($\bm{B}_i$).\footnote{To avoid notational clutter, we henceforth suppress individual $i$ subscripts.} It turns out that we accurately predict within-sample treatment effects as well as levels of treatment and control profiles using this approach. In Step 2, we construct counterpart forecasts of treatment and control outcomes using the auxiliary samples. We compare these constructed counterparts to the actual samples for ages $a \leq a^\ast$. In Step 3, we use the estimated dynamic relationships fit on the constructed samples to predict the post-$a^{\ast}$ outcomes.
+Specifically, we adopt a three-step procedure. In Step 1, we use the experimental sample to conduct mediation analyses relating the vector of outcomes at age $a$ for person $i$ ($\bm{Y}^{d}_{i,a}$) for $a\leq a^*$ to predictor variables (and interactions) that are affected by treatment ($\bm{X}^{d}_{i,a}$), as well as background variables ($\bm{B}_i$).\footnote{To avoid notational clutter, we henceforth suppress individual $i$ subscripts.} It turns out that we accurately predict within-sample treatment effects as well as levels of treatment and control profiles using this approach. In Step 2, we construct counterpart predictions of treatment and control outcomes using the auxiliary samples. We compare these constructed counterparts to the actual samples for ages $a \leq a^\ast$. In Step 3, we use the estimated dynamic relationships fit on the constructed samples to predict the post-$a^{\ast}$ outcomes.
 
 Under exogeneity of the predictor variables and structural invariance (defined below), the two stages can be compressed into a single, one-stage, non-parametric matching procedure.\footnote{See \citet{Heckman_Ichimura_etal_1998_Econometrica} for an example.} In Appendix~\ref{appendix:nonpar} we compare the estimates from matching with those from our main approach. We find close agreement in the two approaches (see Appendix~\ref{appendix:nonpar}).
 
@@ -456,7 +456,7 @@ supp( \bm{Y}_{e,a}, \bm{X}^d_{e,a}, \bm{B}_e ) \subseteq supp( \bm{Y}_{n,a}, \bm
 \doublespacing
 This assumption is straightforward to test for ages $a\leq a^\ast$. It is satisfied in our samples. See Appendix~\ref{app:containsupport}.
 
-\subsubsection{Conditions for Valid Out-of-Sample Forecasts}
+\subsubsection{Conditions for Valid Out-of-Sample Predictions}
 
 A strong sufficient condition for identifying the distribution of life-cycle profiles of individuals in the experimental sample using individuals in the auxiliary samples is Condition~\ref{cond:cond1}:
 
@@ -546,7 +546,7 @@ Collecting results, we obtain the following theorem:
 
 \onehalfspacing
 \setcounter{theorem}{0}
-\begin{theorem}\label{theorem:main} \textbf{Valid Out-of-Sample Forecasts} \\
+\begin{theorem}\label{theorem:main} \textbf{Valid Out-of-Sample Predictions} \\
 Under Assumptions~\ref{ass:alignment}-\ref{ass:summary}, Conditions~\ref{cond:cond1} through \ref{cond:cond3} hold for any value of $\left( \bm{X}^d_{k,a}, \bm{B}_k \right)$. \\
 \emph{This is an immediate consequence of the cited assumptions.} $\Box$
 \end{theorem}
@@ -558,19 +558,19 @@ In Appendix~\ref{app:endogeneity}, we test for endogeneity in the experimental a
 
 \subsubsection{Using Matching to Construct Virtual Treatment and Comparison Groups}\label{usingmatching}
 
-Under exogeneity assumption~\ref{ass:exog} and invariance condition~\ref{ass:summary} we can use matching to construct counterparts to treatment and control groups in the auxiliary sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} use this procedure.} Doing so compresses the two stages of constructing a comparison group and creating forecasts into one stage. Matching in this fashion creates direct auxiliary counterparts for each member of the experimental samples. It is an intuitively appealing estimator.
+Under exogeneity assumption~\ref{ass:exog} and invariance condition~\ref{ass:summary} we can use matching to construct counterparts to treatment and control groups in the auxiliary sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} use this procedure.} Doing so compresses the two stages of constructing a comparison group and creating predictions into one stage. Matching in this fashion creates direct auxiliary counterparts for each member of the experimental samples. It is an intuitively appealing estimator.
 
 We discuss this approach in Appendix~\ref{appendix:match}. Matching is a non-parametric estimator of the conditional mean functions. There is close agreement between non-parametric estimates based on matching and more parametric model-based approaches like the one we use throughout the main text (see Appendix~\ref{appendix:nonpar}).
 
 \subsubsection{Summarizing Our Approach and What We Do in This Paper}
 
-Using the data sources listed in Table~\ref{table:sources}, we execute our analysis in two stages. In Stage I, we construct comparison samples using background variables ($\bm{B}_n$). In Stage II, we use the samples so constructed to create post-$a^\ast$ forecasting models based on $\bm{B}$ and $\bm{X}^d_e$. We repeat that the structural invariance and exogeneity assumptions discussed in this section are \emph{sufficient} conditions for justifying \ref{cond:cond1}--\ref{cond:cond3}. We can clearly weaken these assumptions. For example, creating mean difference counterfactuals only requires exogeneity and structural invariance of the mean difference versions of Equation~\eqref{eq:withbetimplication}. The conditions stated here for level equations by treatment status have the advantage of being testable on certain subsamples of the data. They also justify matching.
+Using the data sources listed in Table~\ref{table:sources}, we execute our analysis in two stages. In Stage I, we construct comparison samples using background variables ($\bm{B}_n$). In Stage II, we use the samples so constructed to create post-$a^\ast$ prediction models based on $\bm{B}$ and $\bm{X}^d_e$. We repeat that the structural invariance and exogeneity assumptions discussed in this section are \emph{sufficient} conditions for justifying \ref{cond:cond1}--\ref{cond:cond3}. We can clearly weaken these assumptions. For example, creating mean difference counterfactuals only requires exogeneity and structural invariance of the mean difference versions of Equation~\eqref{eq:withbetimplication}. The conditions stated here for level equations by treatment status have the advantage of being testable on certain subsamples of the data. They also justify matching to make valid predictions.
 
 \subsection{Predicting Parental Income} \label{section:pincome}
 
 ABC/CARE offers childcare to the parents of treated children for more than nine hours a day for five years, 50 weeks a year. Only $27\%$ of mothers of children reported living with a partner at baseline and this status barely changed during the course of the experiment (see Appendix~\ref{appendix:background}). The childcare component generates the treatment effects in maternal labor force participation and parental income reported in Table~\ref{table:tescombined} and Appendix~\ref{appendix:results}.
 
-We observe parental income at eight different time points for the experimental subjects up through age 21.\footnote{The ages at which parental income is observed is at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers in ABC/CARE were, on average, 41 years old.}$^,$\footnote{We linearly interpolate parental income for ages for which we do not have observations between 0 and 21.} As Table~\ref{table:tescombined} shows, treatment effects on parental income are sustained through the child's age 21. This presumably arises from wage growth due to parental attainment of further education and/or more work experience. An ideal approach would be to estimate the profile over the full life cycle of mothers. We propose two different approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; and (ii) an approach based on the analysis of Section~\ref{section:just}. In Section~\ref{section:cbaresults}, we present estimates using the earnings through age 21 and using these two alternatives for projecting future labor income after age 21. The benefits of the program increase when considering the full life cycles of mothers using either approach.
+We observe parental income at eight different time points for the experimental subjects up through age 21.\footnote{The ages at which parental income is observed is at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers in ABC/CARE were, on average, 41 years old.}$^,$\footnote{We linearly interpolate parental income for ages for which we do not have observations between 0 and 21.} As Table~\ref{table:tescombined} shows, treatment effects on parental income are sustained through the child's age 21. This presumably arises from wage growth due to parental attainment of further education and/or more work experience. An ideal approach would be to estimate the profile over the full life cycle of mothers. We propose two different approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; and (ii) an approach based on the analysis of Section~\ref{section:just}. In Section~\ref{section:cbaresults}, we present estimates using the labor income through age 21 and using these two alternatives for projecting future labor income after age 21. The benefits of the program increase when considering the full life cycles of mothers using either approach.
 
 Any childcare inducements of the program likely benefit parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect (especially if there are younger siblings present). In Appendix~\ref{app:endogeneity}, we show that the treatment effect for discounted parental income is much higher when there are no siblings of the participant children at baseline. The effect also weakens when comparing children who have siblings younger than 5 years old to children who have siblings 5 years old or younger.\footnote{These patterns persist when splitting the ABC/CARE sample by gender, but the estimates are not precise because the samples become too small. See Appendix~\ref{app:parentalincome}.}
 
