--- a/abc_comprehensivecba_gmm.tex
+++ b/abc_comprehensivecba_gmm.tex
@@ -39,43 +39,43 @@ Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a},
 \noindent First, note that Assumption~\ref{ass:exog} (Exogeneity) implies
 
 \begin{eqnarray}
-\mathbb{E} \left[ Y_{e,j,a}^d | \bm{X}_{e}^d, \bm{B}_{e} \right] =  \phi^d_{e,j,a}\left( \bm{X}_{e}^d, \bm{B}_{e} \right). \label{eq:main}
+\mathbb{E} \left[ Y_{e,j,a}^d | \bm{X}_{e,a}^d, \bm{B}_{e} \right] =  \phi^d_{e,j,a}\left( \bm{X}_{e,a}^d, \bm{B}_{e} \right). \label{eq:main}
 \end{eqnarray}
 
-\noindent By Assumption~\ref{ass:contain} (Support Conditions), the support of the auxiliary sample contains the support of the experimental sample. Thus, Equation~\eqref{eq:main} is valid for any $\bm{X}^d_{k,a}$, $\bm{B}$, and $\bm{Y}_{k,a}$, with $k \in \{ e, n\}$. We then can write: 
+\noindent By Assumption~\ref{ass:contain} (Support Conditions), the support of the auxiliary sample contains the support of the experimental sample. Thus, Equation~\eqref{eq:main} is valid for any $\bm{X}^d_{k,a}$, $\bm{B}_{k}$, and $\bm{Y}_{k,a}$, with $k \in \{ e, n\}$. We then can write: 
 
 \begin{eqnarray}
-\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n}^d, \bm{B}_{n} \right] =  \phi^d_{e,j,a}\left( \bm{X}_{n}^d, \bm{B}_{n} \right).
+\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n,a}^d, \bm{B}_{n} \right] =  \phi^d_{e,j,a}\left( \bm{X}_{n,a}^d, \bm{B}_{n} \right).
 \end{eqnarray}
 
 \noindent By Assumption~\ref{ass:summary} (Invariance), we can write this as: 
 
 \begin{eqnarray}
-\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n}^d, \bm{B}_{n} \right] &=&  \phi^d_{e,j,a}\left( \bm{X}_{n}^d, \bm{B}_{n} \right) \nonumber \\ 
- &=&  \phi^d_{n,j,a}\left( \bm{X}_{n}^d, \bm{B}_{n} \right) \nonumber \\
- &=&  \phi_{j,a}\left( \bm{X}_{n}^d, \bm{B}_{n} \right). \label{eq:mainpred}
+\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n,a}^d, \bm{B}_{n} \right] &=&  \phi^d_{e,j,a}\left( \bm{X}_{n,a}^d, \bm{B}_{n} \right) \nonumber \\ 
+ &=&  \phi^d_{n,j,a}\left( \bm{X}_{n,a}^d, \bm{B}_{n} \right) \nonumber \\
+ &=&  \phi_{j,a}\left( \bm{X}_{n,a}^d, \bm{B}_{n} \right). \label{eq:mainpred}
 \end{eqnarray}
 
-\noindent Equation~\eqref{eq:main} is key in framing the data combination approach we use in the GMM framework. Its states that the prediction function $\phi_{j,a} \left( \cdot, \cdot \right) $ is invariance across (i) the auxiliary and experimental datasets; and (ii) the control and treatment groups. Thus, it enables to predict (identify and estimate) the $Y_{e,j,a}^d$ for $d \in \{0, 1\}$ based on the data moment $\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n}^d, \bm{B}_{n} \right] $.\\
+\noindent Equation~\eqref{eq:main} is key in framing the data combination approach we use in the GMM framework. It states that the prediction function $\phi_{j,a} \left( \cdot, \cdot \right) $ is invariant across (i) the auxiliary and experimental datasets; and (ii) the control and treatment groups. Thus, it enables us to predict (identify and estimate) $Y_{e,j,a}^d$ for $d \in \{0, 1\}$ based on the data moment $\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n,a}^d, \bm{B}_{n} \right] $.\\
 
 \noindent Let $\bm{\theta}_{j,a}$ be the set of parameters characterizing $\phi_{j,a}\left( \cdot, \cdot \right)$. It is useful to consider a standard estimation approach: non-linear least squares (NLS). That is, 
 
 \begin{equation}
- \bm{\theta}_{j,a}^{\text{NLS}} := \argmin_{\bm{\theta}_{j,a}} \sum \limits _{i \in \mathcal{I}} {\left( Y^d_{n,j,a}  - \phi_{j,a} (\cdot , \cdot); \bm{\theta}_{j,a} \right)}^2, 
+ \bm{\theta}_{j,a}^{\text{NLS}} := \argmin_{\bm{\theta}_{j,a}} \sum \limits _{i \in \mathcal{I}} {\left( Y^d_{n,j,a}  - \phi_{j,a} (\cdot , \cdot; \bm{\theta}_{j,a} )\right)}^2, 
 \end{equation}
 
 \noindent where $\mathcal{I}$ indexes the individuals in the sample. The conditions provided in the main text grant identification of  $\bm{\theta}_{j,a}^{\text{NLS}}$ (see Theorem~\ref{theorem:main}). The first order condition for the NLS estimator is: 
 
 \begin{eqnarray} 
-\sum \limits _{i \in \mathcal{I}}  \psi \left( \cdot , \cdot); \bm{\theta}_{j,a} \right) \left( Y^d_{n,j,a}  - \phi_{j,a} (\cdot , \cdot; \bm{\theta}_{j,a} \right) = 0, \label{eq:nlsfoc}
+\sum \limits _{i \in \mathcal{I}}  \psi \left( \cdot , \cdot; \bm{\theta}_{j,a} \right) \left( Y^d_{n,j,a}  - \phi_{j,a} (\cdot , \cdot; \bm{\theta}_{j,a} )\right) = 0, \label{eq:nlsfoc}
 \end{eqnarray}
 
-\noindent where $\psi \left( \cdot , \cdot; \bm{\theta}_{j,a} \right) := \frac{ \phi_{j,a} \left( \cdot , \cdot; \bm{\theta}_{j,a} \right)}{\partial \bm{\theta}_{j,a}}$.\\
+\noindent where $\psi \left( \cdot , \cdot; \bm{\theta}_{j,a} \right) := \frac{\partial \phi_{j,a} \left( \cdot , \cdot; \bm{\theta}_{j,a} \right)}{\partial \bm{\theta}_{j,a}}$.\\
 
 \noindent Equation~\eqref{eq:main} provides a ``natural'' moment condition for framing the problem in the GMM framework. That is, the moment condition allowing us to identify (and estimate) the post-$a^*$ prediction for the experimental sample as a function of observed data in the auxiliary sample: 
 
 \begin{equation}
-\mathbb{E} \left[\psi \left( \cdot , \cdot; \bm{\theta}_{j,a} \right) \left( Y^d_{n,j,a}  - \phi_{j,a} (\cdot , \cdot; \bm{\theta}_{j,a} \right) \right]  = 0.
+\mathbb{E} \left[\psi \left( \cdot , \cdot; \bm{\theta}_{j,a} \right) \left( Y^d_{n,j,a}  - \phi_{j,a} (\cdot , \cdot; \bm{\theta}_{j,a} )\right) \right]  = 0.
 \end{equation}
 
 
